--- a/views/post/write.handlebars
+++ b/views/post/write.handlebars
@@ -1,34 +1,31 @@
 <div>
 
-    <form action="/write" method="post" id="writeForm">
-         <!--테이블-->
+    <form method="post" id="writeForm">
         <div class="card shadow mb-4">
-            <!-- 제목   -->
             <div class="row">
                 <div class="col-sm-12">
                     <div class="card-header py-3">
                         <span class="m-0 font-weight-bold text-primary"> 글쓰기</span>
                         <button class="btn btn-primary btn-icon-split btn-sm fa-pull-right"
-                                type="submit" form="writeForm"  >
+                                id="writeBtn"
+                                type="button" form="writeForm">
                             <span class="text">완료</span>
                         </button>
                     </div>
                 </div>
-
             </div>
 
-            <!--테이블    -->
             <div class="card-body">
                 <div class="table-responsive">
                     <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                        <input class="no-border" type="text" name="title" placeholder="제목" autoComplete="off"/>
+                        <input class="no-border" type="text" name="title" id="title" placeholder="제목" autoComplete="off"/>
                         <hr/>
-                        <textarea class="no-border" name="content" placeholder="본문"></textarea><br/>
+                        <textarea class="no-border" name="content" id="content" placeholder="본문"></textarea><br/>
                         <hr/>
                     </div>
                 </div>
             </div>
         </div>
-
     </form>
+
 </div>
