게시판 글쓰기 및 페이징 구현

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,9 +21,8 @@
             <!-- End of Topbar -->
 
             <!-- Begin Page Content -->
-            <div class="container-fluid">
+            <div class="container-fluid" id="body_container">
                 {{{body}}}
-                
             </div>
             <!-- /.container-fluid -->
 
