--- a/views/partials/imports.handlebars
+++ b/views/partials/imports.handlebars
@@ -42,3 +42,4 @@
 <!-- my js-->
 <script src="/js/my/auth.js"></script>
 <script src="/js/my/post.js"></script>
+<script src="/js/my/handlebars.js"></script>
