--- a/views/post/inner.handlebars
+++ b/views/post/inner.handlebars
@@ -5,9 +5,9 @@
     <div class="card-header py-3">
         <div class="row">
             <div class="col-sm-1"><i class="fas fa-eye" style="color : #2e59d9"></i> {{inner.views}}</div>
-            <div class="col-sm-8"><i class="fas fa-grin-hearts" style="color: #ca2819"></i> {{inner.likes}}</div>
-            <div class="col-sm-1">{{inner.author}}</div>
-            <div class="col-sm-2">{{inner.date}}</div>
+            <div class="col-sm-8"><i class="fas fa-grin-hearts" style="color: #ca2819"></i> {{inner.like_cnt}}</div>
+            <div class="col-sm-1">{{inner.UserInfo.name}}</div>
+            <div class="col-sm-2">{{inner.createdAt}}</div>
         </div>
     </div>
 </div>
