--- a/views/post/bulletin.handlebars
+++ b/views/post/bulletin.handlebars
@@ -7,7 +7,7 @@
         <h6 class="m-0 font-weight-bold text-primary">게시판</h6>
     </div>
     <!--테이블    -->
-    <div class="card-body">
+    <div class="card-body" id="bulletin">
         <div class="table-responsive">
             <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
                 <div class="row">
@@ -29,25 +29,19 @@
                     <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
                         <thead>
                         <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>날짜</th>
-                            <th>좋아요</th>
+                            <th style="width: 100px">번호</th>
+                            <th style="width: 400px">제목</th>
+                            <th style="width: 100px">글쓴이</th>
+                            <th style="width: 150px">날짜</th>
+                            <th style="width: 80px">좋아요</th>
                         </tr>
                         </thead>
-                        <tfoot>
-                        <tr>
-                            <th>번호</th>
-                            <th>제목</th>
-                            <th>날짜</th>
-                            <th>좋아요</th>
-                        </tr>
-                        </tfoot>
                         <tbody>
                         {{#each contents}}
                             <tr>
                                 <td>{{this.id}}</td>
-                                <td><a href="post/{{this.id}}">{{this.title}}</a></td>
+                                <td><a href="post/id/{{this.id}}">{{this.title}}</a></td>
+                                <td>{{this.UserInfo.name}}</td>
                                 <td>{{this.createdAt}}</td>
                                 <td>{{this.like_cnt}}</td>
                             </tr>
@@ -62,9 +56,11 @@
                             <li id="dataTable_previous" class="paginate_button page-item previous">
                                 <a class="page-link" href="#" aria-controls="dataTable" tabindex="0" >처음</a>
                             </li>
-                            <li class="paginate_button page-item ">
-                                <a class="page-link" href="#" aria-controls="dataTable" tabindex="0">1</a>
-                            </li>
+                            {{#each tabCount}}
+                                <li class="paginate_button page-item ">
+                                    <a class="page-link" href="/post/page/{{this}}" aria-controls="dataTable" tabindex="0">{{this}}</a>
+                                </li>
+                            {{/each}}
                             <li id="dataTable_next" class="paginate_button page-item next">
                                 <a class="page-link" href="#" aria-controls="dataTable" tabindex="0">마지막</a>
                             </li>
