--- a/views/partials/imports.handlebars
+++ b/views/partials/imports.handlebars
@@ -41,5 +41,5 @@
 
 <!-- my js-->
 <script src="/js/my/auth.js"></script>
-<script src="/js/my/post.js"></script>
+<script src="/js/my/bulletin.js"></script>
 <script src="/js/my/handlebars.js"></script>
