--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -45,7 +45,7 @@
         </li>
 
         <li class="nav-item no-arrow menu">
-            <a class="nav-link" href="/post" role="button" aria-expanded="false">
+            <a class="nav-link" href="/bulletin/1" role="button" aria-expanded="false">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small" id="community">게시판</span>
             </a>
         </li>
