회원정보 변경하기 (이미지변경, jwt 갱신문제 해결)

--- a/views/partials/imports.handlebars
+++ b/views/partials/imports.handlebars
@@ -42,4 +42,6 @@
 <!-- my js-->
 <script src="/js/my/auth.js"></script>
 <script src="/js/my/bulletin.js"></script>
+<script src="/js/my/chat.js"></script>
+<script src="/js/my/user.js"></script>
 <script src="/js/my/handlebars.js"></script>
