--- a/views/partials/topbar.handlebars
+++ b/views/partials/topbar.handlebars
@@ -177,19 +177,15 @@
             </a>
             {{else}}
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <img class="img-profile rounded-circle" src="https://source.unsplash.com/QAB-WJcbgJk/60x60">
+                <img class="img-profile rounded-circle" src="{{session.profile_image}}">
                 <span class="mr-2 d-none d-lg-inline text-gray-600 small">{{session.userName}}({{session.userId}})</span>
             </a>
             {{/unless}}
             <!-- Dropdown - User Information -->
             <div class="dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="userDropdown">
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="/user/edit">
                     <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                     Profile
-                </a>
-                <a class="dropdown-item" href="#">
-                    <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
-                    Settings
                 </a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item" href="/logout">
