--- a/views/chat/home.handlebars
+++ b/views/chat/home.handlebars
@@ -1,87 +1,38 @@
-<h1 class="h3 mb-1 text-gray-800">{{title}}</h1>
+<div class="row" id="chat-box">
 
-<!--테이블-->
-<div class="card shadow mb-4">
-    <!-- 제목   -->
-    <div class="card-header py-3">
-        <div class="row">
+    <!-- Area Chart -->
+    <div class="col-xl-4 col-lg-5">
+        <div class="card shadow mb-4">
+            <!-- Card Header - Dropdown -->
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">채팅목록</h6>
+                <button class="btn btn-sm float-right" id="refreshChatList" type="button">🔄</button>
+            </div>
+            <!-- Card Body -->
+            <div class="card-body chat-body" id="chatListBox">
 
-            {{#each bulletinList}}
-                <div class="col-xl-3 col-md-6 mb-4" >
-                    <div class="card border-left-primary shadow h-100 py-2">
-                        <div class="card-body" id="bulletinList">
-                            <h6 class="m-0 font-weight-bold text-primary" id="bulletin"><a href="/bulletin/{{this.id}}">{{this.name}}</a></h6>
-                        </div>
-                    </div>
-                </div>
-            {{/each}}
-
+            </div>
+            <div class="card-header"></div>
         </div>
     </div>
-    <!--테이블    -->
-    <div class="card-body" id="bulletin">
-        <div class="table-responsive">
-            <div id="dataTable_wrapper" class="dataTables_wrapper dt-bootstrap4">
-                <div class="row">
-                    <div class="col-sm-12 col-md-6">
-                        <a href="/post/write" class="btn btn-primary btn-icon-split btn-sm">
-                            <span class="text">글쓰기</span>
-                        </a>
-                    </div>
-                    <div class="col-sm-12 col-md-6">
-                        <div id="dataTable_filter" class="dataTables_filter">
-                            <label>
-                                Search:
-                                <input class="form-control form-control-sm" type="search" placeholder="" aria-controls="dataTable">
-                            </label>
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
-                        <thead>
-                        <tr>
-                            <th style="width: 100px">번호</th>
-                            <th style="width: 350px">제목</th>
-                            <th style="width: 80px"><i class="fas fa-eye" style="color : #2e59d9"></i> 조회수</th>
-                            <th style="width: 80px"><i class="fas fa-heart" style="color: #ca2819"></i> 좋아요</th>
-                            <th style="width: 150px">글쓴이</th>
-                            <th style="width: 150px">날짜</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        {{#each contents}}
-                            <tr>
-                                <td>{{this.id}}</td>
-                                <td><a href="/post?id={{this.id}}">{{this.title}}</a></td>
-                                <td>{{this.view_cnt}}</td>
-                                <td>{{this.like_cnt}}</td>
-                                <td>{{this.UserInfo.user_id}}</td>
-                                <td>{{this.createdAt}}</td>
-                            </tr>
-                        {{/each}}
-                        </tbody>
-                    </table>
 
-                </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-12">
-                        <ul class="pagination">
-                            <li id="dataTable_previous" class="paginate_button page-item previous">
-                                <a class="page-link" href="/post?page=1" aria-controls="dataTable" tabindex="0" >처음</a>
-                            </li>
-                            {{#each tabList}}
-                                <li class="paginate_button page-item " id="pages">
-                                    <a class="page-link" href="/post?page={{this}}" id="page{{this}}" aria-controls="dataTable" tabindex="0">{{this}}</a>
-                                </li>
-                            {{/each}}
-                            <li id="dataTable_next" class="paginate_button page-item next">
-                                <a class="page-link" href="/post?page={{tabList.length}}" aria-controls="dataTable" tabindex="0">마지막</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+    <!-- Pie Chart -->
+    <div class="col-xl-8 col-lg-7">
+        <div class="card shadow mb-4">
+            <!-- Card Header - Dropdown -->
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <h6 class="m-0 font-weight-bold text-primary">채팅</h6>
             </div>
+            <!-- Card Body -->
+            <div class="card-body chat-body" id="chatHistoryBox">
+                <span> </span>
+
+            </div>
+            <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                <input class="no-border " type="text" name="chatSendInput" id="chatSendInput" placeholder="메세지 보내기" autoComplete="off"/>
+                <button class="btn btn-secondary btn-sm float-right" id="sendChatBtn" type="button">보내기</button>
+            </div>
+
 
         </div>
     </div>
