1대1 채팅 구현

--- a/views/chat/home.handlebars
+++ b/views/chat/home.handlebars
@@ -21,7 +21,7 @@
         <div class="card shadow mb-4">
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
-                <h6 class="m-0 font-weight-bold text-primary">채팅</h6>
+                <h6 class="m-0 font-weight-bold text-primary" id="chat-title">채팅</h6>
             </div>
             <!-- Card Body -->
             <div class="card-body chat-body" id="chatHistoryBox">
@@ -32,7 +32,6 @@
                 <input class="no-border " type="text" name="chatSendInput" id="chatSendInput" placeholder="메세지 보내기" autoComplete="off"/>
                 <button class="btn btn-secondary btn-sm float-right" id="sendChatBtn" type="button">보내기</button>
             </div>
-
 
         </div>
     </div>
