--- a/views/partials/imports.handlebars
+++ b/views/partials/imports.handlebars
@@ -18,6 +18,7 @@
 </div>
 
 
+
 <!-- Bootstrap core JavaScript-->
 <script src="/vendor/jquery/jquery.min.js"></script>
 <script src="/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -39,7 +40,14 @@
 <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.13.1/jquery.validate.min.js"></script>
 <script src="https://ajax.aspnetcdn.com/ajax/mvc/5.2.3/jquery.validate.unobtrusive.min.js"></script>
 
+<!--socket io cdn-->
+<script src="https://cdn.socket.io/socket.io-1.0.6.js"></script>
+
+<!--node_modules/socket.io-client/dist/socket.io.js-->
+<script src="/socket.io/socket.io.js"></script>
+
 <!-- my js-->
+<script src="/js/my/socket.js"></script>
 <script src="/js/my/auth.js"></script>
 <script src="/js/my/bulletin.js"></script>
 <script src="/js/my/chat.js"></script>
