--- a/views/chat/home.handlebars
+++ b/views/chat/home.handlebars
@@ -6,7 +6,7 @@
             <!-- Card Header - Dropdown -->
             <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                 <h6 class="m-0 font-weight-bold text-primary">채팅목록</h6>
-                <button class="btn btn-sm float-right" id="refreshChatList" type="button">🔄</button>
+<!--                <button class="btn btn-sm float-right" id="refreshChatList" type="button">🔄</button>-->
             </div>
             <!-- Card Body -->
             <div class="card-body chat-body" id="chatListBox">
